# movies-api

./: .env.example  .gitignore  alembic.ini  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: e637a2cffdb3_create_phone_number_for_user_column.py
configs/: keys.py
db/: db.py  models.py
misc/: learnings.md  notes.md  typingAnnotationNotes.md
routers/: auth.py  movie_rating.py
src/: .env.local  main.py
src/config/: keys.py
src/db/: db.py  models.py
src/misc/: learnings.md  notes.md
src/routers/: auth.py
src/utils/: decode_jwt.py  gen_access_tkn.py
utils/: decode_jwt.py  gen_access_tkn.py
