[project]
name = "books-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "box>=0.1.5",
    "fastapi>=0.116.0",
    "mysql-connector-python>=9.4.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.42",
    "uvicorn[standard]>=0.35.0",
]
